Add prettyprinter dependencies

--- a/hevm.cabal
+++ b/hevm.cabal
@@ -185,6 +185,8 @@ library
     split                             >= 0.2.3 && < 0.3,
     template-haskell                  >= 2.19.0 && < 3,
     extra                             >= 1.7.14 && < 2,
+    prettyprinter                     >= 1.7 && < 2,
+    prettyprinter-ansi-terminal       >= 1.1 && < 2,
   hs-source-dirs:
     src
 
